syntax = "proto3";

option csharp_namespace = "GrpcPopulation";

service PopulationProvider {
	rpc GetPopulation (PopulationRequest) returns (PopulationResponse);
}

message PopulationRequest{
	string State = 1;
}

message PopulationResponse{
	string Count = 1;
}